--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "devDependencies": {
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.25",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
   }
 }
