--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "next": "^13.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.8.0",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
