--- a/package.json
+++ b/package.json
@@ -6,13 +6,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^10.16.4",
     "next": "^13.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-vertical-timeline-component": "^3.6.0",
-    "recharts": "^2.8.0",
-    "swiper": "^10.3.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
