--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "next": "^13.4.4",
@@ -14,7 +16,11 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "husky": "^9.0.10",
     "postcss": "^8.4.25",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
   }
